Fix alignment of icons in navigation sidebar
With newer releases of the Tabler Icons web font, the placement of the
icons slightly changed. This adjusts the vertical margin accordingly in
order to center the icons properly in the navigation sidebar.

--- a/assets/scss/_navigation.sass
+++ b/assets/scss/_navigation.sass
@@ -21,7 +21,7 @@ aside.navigation
 
 		.icon
 			align-self: flex-start;
-			margin: 0.1em -0.1em 0 0.5em;
+			margin: 0 -0.1em 0 0.5em;
 			font-size: 1.25em;
 
 	ul
